--- a/views/transliterator.twig
+++ b/views/transliterator.twig
@@ -1,16 +1,46 @@
 {% extends 'layout.twig' %}
 {% block body %}
-    {% if error is defined %}
-        <p>Error : {{ error }}</p>
-    {% endif %}
-    <p>Transliterate romaji to kana</p>
-    <form method="post" action="/transliterator/kana">
-        <label for="kanastring">String</label> <input id="kanastring" type="text" name="string">
-        <input type="submit">
-    </form>
-    <p>Transliterate kana to romaji</p>
-    <form method="post" action="/transliterator/romaji">
-        <label for="romajistring">String</label> <input id="romajistring" type="text" name="string">
-        <input type="submit">
-    </form>
+    <div class="container">
+        {% if error is defined %}
+            <p>Error : {{ error }}</p>
+        {% endif %}
+        <h3>Transliterator demos</h3>
+
+        <p>&nbsp;</p>
+
+        <div class="well">
+            <form class="form-horizontal" method="post" action="/transliterator/kana">
+                <div class="form-group">
+                    <label for="romajistring" class="col-sm-2 control-label">Romaji to kana</label>
+
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="romajistring" name="string" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="well">
+            <form class="form-horizontal" method="post" action="/transliterator/romaji">
+                <div class="form-group">
+                    <label for="kanastring" class="col-sm-2 control-label">Kana to romaji</label>
+
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="kanastring" name="string" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <p>&nbsp;</p>
+        <a href="/">Back</a>
+    </div>
 {% endblock %}
