--- a/views/converter-numeral-japanese.twig
+++ b/views/converter-numeral-japanese.twig
@@ -1,16 +1,28 @@
 {% extends 'layout.twig' %}
 {% block body %}
     <div class="container">
-        <h3>Japanese numeral converter</h3>
-
-        <p>Original numeral was {{ numeral }}</p>
-
-        <p>Kanji is {{ kanji }}</p>
-
-        <p>Hiragana is {{ hiragana }}</p>
-
-        <p>Romaji is {{ romaji }}</p>
-
+        <h3>Japanese numeral converter results</h3>
+        {% for key, value in _context %}
+            {% if key != 'app' and key != '_parent' %}
+                <div class="row">
+                    <div class="col-sm-4">{{ key }}</div>
+                    <div class="col-sm-8">
+                        {% if value is same as(false) %}
+                            false
+                        {% elseif value is same as(true) %}
+                            true
+                        {% elseif value is iterable %}
+                            {% for entry in value %}
+                                '{{ entry }}'
+                                {% if not loop.last %},{% endif %}
+                            {% endfor %}
+                        {% else %}
+                            {{ value }}
+                        {% endif %}
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
         <p>&nbsp;</p>
         <a href="/converter">Back</a>
     </div>
