--- a/views/converter-year-japanese.twig
+++ b/views/converter-year-japanese.twig
@@ -2,15 +2,27 @@
 {% block body %}
     <div class="container">
         <h3>Japanese year converter</h3>
-
-        <p>Original year was {{ year }}</p>
-
-        <p>Japanese year is {{ result }}</p>
-
-        <p>Hiragana is {{ kana }}</p>
-
-        <p>Romaji is {{ romaji }}</p>
-
+        {% for key, value in _context %}
+            {% if key != 'app' and key != '_parent' %}
+                <div class="row">
+                    <div class="col-sm-4">{{ key }}</div>
+                    <div class="col-sm-8">
+                        {% if value is same as(false) %}
+                            false
+                        {% elseif value is same as(true) %}
+                            true
+                        {% elseif value is iterable %}
+                            {% for entry in value %}
+                                '{{ entry }}'
+                                {% if not loop.last %},{% endif %}
+                            {% endfor %}
+                        {% else %}
+                            {{ value }}
+                        {% endif %}
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
         <p>&nbsp;</p>
         <a href="/converter">Back</a>
     </div>
