--- a/views/converter.twig
+++ b/views/converter.twig
@@ -50,8 +50,11 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-3 col-sm-9">
+                    <div class="col-sm-offset-3 col-sm-1">
                         <button type="submit" class="btn btn-default">Submit</button>
+                    </div>
+                    <div class="col-sm-1">
+                        <button class="btn btn-info" onclick="fillForm('japaneseera','Shōwa 5')">Shōwa 5</button>
                     </div>
                 </div>
             </form>
