--- a/views/helper.twig
+++ b/views/helper.twig
@@ -18,8 +18,11 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
+                    <div class="col-sm-offset-2 col-sm-1">
                         <button type="submit" class="btn btn-default">Submit</button>
+                    </div>
+                    <div class="col-sm-1">
+                        <button class="btn btn-info" onclick="fillForm('string','素晴らしいです')">素晴らしいです</button>
                     </div>
                 </div>
             </form>
