--- a/views/transliterator.twig
+++ b/views/transliterator.twig
@@ -18,8 +18,11 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
+                    <div class="col-sm-offset-2 col-sm-1">
                         <button type="submit" class="btn btn-default">Submit</button>
+                    </div>
+                    <div class="col-sm-1">
+                        <button class="btn btn-info" onclick="fillForm('romajistring','subarashii')">subarashii</button>
                     </div>
                 </div>
             </form>
@@ -34,8 +37,11 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
+                    <div class="col-sm-offset-2 col-sm-1">
                         <button type="submit" class="btn btn-default">Submit</button>
+                    </div>
+                    <div class="col-sm-1">
+                        <button class="btn btn-info" onclick="fillForm('kanastring','すばらしい')">すばらしい</button>
                     </div>
                 </div>
             </form>
