Update to latest develop version Add demo for inflector component

--- a/views/index.twig
+++ b/views/index.twig
@@ -18,33 +18,40 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h2>Helper</h2>
 
                 <p></p>
 
-                <p><a class="btn btn-default" href="/helper" role="button">View details »</a></p>
+                <p><a class="btn btn-default" href="/helper" role="button">View demos »</a></p>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h2>Analyser</h2>
 
                 <p></p>
 
                 <p><a class="btn btn-default" href="/analyzer" role="button">View demos »</a></p>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h2>Transliterator</h2>
 
                 <p></p>
 
                 <p><a class="btn btn-default" href="/transliterator" role="button">View demos »</a></p>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h2>Converter</h2>
 
                 <p></p>
 
                 <p><a class="btn btn-default" href="/converter" role="button">View demos »</a></p>
+            </div>
+            <div class="col-md-4">
+                <h2>Inflector</h2>
+
+                <p></p>
+
+                <p><a class="btn btn-default" href="/inflector" role="button">View demos »</a></p>
             </div>
         </div>
         <div class="row">
